# mini_cfg

./: .gitlab-ci.yml  .pylintrc  CHANGELOG  LICENSE  README.md  environment_dev.yml  pyproject.toml
.github/workflows/: tests.yml
src/: mini_cfg.py
src/mini_cfg/: file_test_suite.py  mini_cfg.py
tests/itests/: file_test_suite.py  itest_toml_config.py  itest_yaml_config.py
tests/itests/test_configs/: basic_config.toml  cascaded_config.toml  nested_with_pointer_config.toml
tests/itests/test_configs/toml/: basic_config.toml  cascaded_config.toml  nested_config.toml  nested_cycle_a.toml  nested_cycle_b.toml  nested_with_pointer_config.toml  separated_nested_config.toml
tests/itests/test_configs/yaml/: basic_config.yaml  cascaded_config.yaml  nested_config.yaml  nested_cycle_a.yaml  nested_cycle_b.yaml  nested_with_pointer_config.yaml  separated_nested_config.yaml
tests/utests/: utest_mini_cfg.py
